# data-automation-pipeline

./: .cursorignore  .env.example  Procfile  README.md  dashboard.py  pyproject.toml  requirements.txt  run_dashboard.py
.cursor/rules/: ai-analysis-system.mdc  dashboard-components.mdc  data-pipeline.mdc  development-workflow.mdc  project-overview.mdc  technical-indicators.mdc  troubleshooting-fixes.mdc
data/raw/: AMD_daily_20250527_112748.csv  BYD_daily_20250527_112748.csv  NVDA_daily_20250527_112748.csv  TSLA_daily_20250527_112748.csv
docs/: AI_SETUP.md  DASHBOARD_README.md  STREAMLIT_QUICK_START.md
reports/: stock_analysis_report_20250527_112812.html  stock_analysis_report_20250527_112812.xlsx  stock_analysis_report_20250527_140701.html  stock_analysis_report_20250527_140701.xlsx  stock_analysis_report_20250527_144337.html  stock_analysis_report_20250527_144337.xlsx
scripts/: __init__.py  ai_analyzer.py  api_client.py  config.py  data_processor.py  main.py  report_generator.py
templates/: pdf_template.html  report_template.html
tests/: test_components.py  test_dashboard_components.py  test_pdf.py  test_pipeline.py  test_pipeline_no_supabase.py
