[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-automation-pipeline"
version = "0.1.0"
description = "Automated data pipeline for stock analysis using Yahoo Finance and Supabase."
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "streamlit>=1.28.0",
    "watchdog>=3.0.0",
    "openai>=1.82.0",
    "reportlab>=4.4.1",
]
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
yfinance = "*"
pandas = "*"
openpyxl = "*"
plotly = "*"
python-dotenv = "*"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[project.scripts]
data-automation-pipeline = "data_automation_pipeline.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
